--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -24,6 +24,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-  ],
+, "../server/src/services/product.service.ts"  ],
   "exclude": ["node_modules"]
 }
